SLING-8797 - static analysis improvements (javadoc, logs, etc.)